# ssdir

./: .gitignore  LICENSE  Makefile  README.md  SUPPLEMENTARY.md  pyproject.toml  train.py
pytorch_ssdir/: __init__.py  args.py  main.py
pytorch_ssdir/modeling/: __init__.py  decoder.py  depth.py  encoder.py  model.py  present.py  what.py  where.py
pytorch_ssdir/run/: loss.py  transforms.py
tests/: conftest.py  test_decoder.py  test_depth.py  test_encoder.py  test_model.py  test_present.py  test_what.py  test_where.py
